<resources>
    <string name="app_name">TV9 News</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="choose_language">Choose Language</string>
    <string name="choose_state">Choose States</string>
    <string name="choose_category">Choose Category</string>
    <string name="you_can_modify_selection">You can modify your selection anytime later</string>
    <string name="get_latest_news_video">Get latest news and videos of your selected states</string>
    <string name="choose_at_least_topics">Choose at least 5 topics</string>
    <string name="skip">Skip</string>
    <string name="back">Back</string>
    <string name="next">Next</string>

    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="settings">Settings</string>
    <string name="saved">Saved</string>
    <string name="subscribe">Subscribe</string>
    <string name="live">Live</string>
    <string name="something_wrong">Something wents wrong</string>
    <string name="success">Success</string>
    <string name="article_shorts">Article Shorts</string>
    <string name="video_shorts">Video Shorts</string>
    <string name="podcast_shorts">Podcast Shorts</string>
    <string name="web_story">Web Stories</string>
    <string name="description_article">क्यूबा के हवाना में एक होटल में जोरदार धमाका हुआ है. इस ब्लास्ट में 22 लोगों की मौत हो गई, जबकि कम से कम 74 लोग घायल हो गए. धमाके की वजह गैस का रिसाव बताई जा रही है. दरअसल राजधानी हवाना के लग्जरी होटल साराटोगा में 96 कमरे हैं, होटल का रेनोवेशन हो रहा था, इस वजह से यहां कोई भी गेस्ट नहीं था. इस हादसे के बाद राष्ट्रपति मिगुएल डियाज़-कैनेल ने ट्वीट कर दुख जाता है. उन्होंने कहा कि यह कोई अटैक नहीं है, न ही किसी तरह का बम ब्लास्ट है. यह गैस रिसाव की वजह से हुआ है. यह एक दुखद घटना है.</string>
    <string name="no_data_found">No data found</string>
    <string name="author">Author</string>

    <!--podcast-->
    <string name="text_long">TV9 Network</string>
    <string name="text_short">TV9 News</string>
    <string name="play_initial_time">00:00</string>
    <string name="track_number">Track</string>
    <string name="description_icon_player">player icon</string>
    <string name="description_play_button">play/pause button</string>
    <string name="description_previous_button">previous button</string>
    <string name="description_next_button">next button</string>
    <string name="description_repeat_button">repeat button</string>
    <string name="description_shuffle_button">shuffle button</string>
</resources>