<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:theme="@style/ThemeOverlay.AppCompat.Dark"
    xmlns:android="http://schemas.android.com/apk/res/android">
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/activity_horizontal_margin"
    >

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:scaleType="fitXY"
        android:layout_centerVertical="true"
        android:contentDescription="@string/nav_header_desc"
        android:src="@drawable/logo_drawer"
        />

    <LinearLayout
        android:id="@+id/saved"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_centerVertical="true"
        android:layout_marginEnd="30dp"
        android:layout_toStartOf="@+id/settingLL"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/dp20"
            android:layout_height="@dimen/dp20"
            android:src="@drawable/ic_bookmark"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/saved"
            android:textColor="@color/black_text"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/settingLL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:gravity="center"
        android:layout_centerVertical="true"
        android:layout_toStartOf="@+id/closeIcon"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/dp20"
            android:layout_height="@dimen/dp20"
            android:src="@drawable/ic_setting"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textColor="@color/black_text"
            />
    </LinearLayout>

    <ImageView
        android:id="@+id/closeIcon"
        android:layout_width="@dimen/dp30"
        android:layout_height="@dimen/dp30"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:src="@drawable/ic_close_drawer" />

</RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/button_stroke"
        />
</LinearLayout>